<resources>
    <string name="app_name">Sheb!!</string>
    <string name="nav_header_desc">User image</string>
    <string name="action_settings">Settings</string>

    <!-- 左メニュー -->
    <string name="menu_search">Search</string>
    <string name="menu_search_hint">Bookmark name search…</string>
    <string name="menu_notification">Notice</string>
    <string name="menu_login">Google Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_operation_billing">Support</string>
    <string name="menu_billing">App billing</string>
    <string name="menu_app_rating">Rating your app</string>
    <string name="menu_how_to_use">How to use</string>
    <string name="menu_operation_others">Other</string>
    <string name="menu_other">Other</string>
    <string name="menu_oss_license">OSS license</string>
    <string name="menu_settings">Settings</string>

    <!-- 右メニュー -->
    <string name="menu_folder_add">Add folder</string>
    <string name="menu_item_add">Add bookmarks</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_image_reacquisition">Image retrieval</string>
    <string name="set_first_folder">Set the initial folder</string>
    <string name="set_first_folder_done">Set %s to the initial folder.</string>
    <string name="set_first_folder_error">The initial folder could not be set.</string>
    <string name="configurable_first_folder">You can set the initial folder from the menu on the top right of the home page.</string>
    <string name="breadcrumbs_next">&gt;</string>

    <!-- ポップアップ -->
    <string name="popup_folder_delete">Delete folder</string>
    <string name="popup_folder_edit">Edit folder name</string>
    <string name="popup_folder_move">Move folder</string>
    <string name="popup_folder_share">Share folder</string>
    <string name="popup_item_delete">Delete bookmark</string>
    <string name="popup_item_edit">Edit bookmarks</string>
    <string name="popup_item_move">Move bookmark</string>
    <string name="popup_item_share">Share bookmark</string>
    <string name="popup_item_thumbnail_update">Update images</string>
    <string name="popup_item_create_shortcut">Create shortcut</string>

    <!-- 設定 -->
    <string name="setting_user_name">User name to be displayed when the menu is opened from the top left</string>
    <string name="setting_user_mail">Show your login email address when you open the menu from the top left corner</string>
    <string name="setting_close_application">Quit the application when starting up a browser, etc.</string>
    <string name="setting_close_application_summary">If you want to return to this app after the browser or other devices have been launched, turn it off. </string>
    <string name="setting_start_folder">Initial display folder</string>

    <!-- ダイアログ・スナックバー -->
    <string name="sign_in_failure">Failed to retrieve your Google Account information.</string>
    <string name="sign_in_success">You have signed in with %s.</string>
    <string name="sign_out_confirm">Do you want to log out?</string>
    <string name="sign_out_complete">Logged out.</string>
    <string name="cant_start_activity">Unable to activate the shortcut.\nPlease check your registration details.</string>
    <string name="shortcut_created">A shortcut has been created for Home.</string>
    <string name="sync_network_error">No synchronization was done because the communication failed.</string>
    <string name="sync_title">All data in sync.</string>
    <string name="sync_success">All data has been synchronized.</string>

    <!-- お問い合わせ -->
    <string name="inquiry_top_message">Please enter your email address and contact details.</string>
    <string name="inquiry_top_bottom">I will always review your comments, but I may not be able to respond to all of them. \nI will not be able to respond to all of them. \n\nAfter I receive your inquiry, a confirmation email will be sent to you. \nPlease set up to receive emails from \"info@ambitious-i.net\".</string>
    <string name="email_hint">email address</string>
    <string name="email_validation">Please enter in the email address format.</string>
    <string name="inquiry_hint">Inquiry details</string>
    <string name="inquiry_validation">Please enter your inquiry.</string>
    <string name="send_button">Send</string>
    <string name="send_complete">Inquiries are now accepted.</string>
    <string name="send_error">Could not send it.</string>

    <!-- 新規作成・更新 -->
    <string name="dialog_item_add_title">Add a bookmark</string>.
    <string name="dialog_item_update_title">Update your bookmark</string>.
    <string name="dialog_folder_add_title">Add a folder</string>.
    <string name="dialog_folder_update_title">Update the folder name</string>.
    <string name="dialog_folder_hint">Folder name</string>
    <string name="dialog_item_hint">Title</string>
    <string name="dialog_url_hint">URL</string>
    <string name="dialog_folder_error">Enter a folder name. </string>.
    <string name="dialog_item_error">Enter a title. </string>.
    <string name="dialog_url_error">Enter the URL correctly. </string>.
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_add_button">Add</string>
    <string name="dialog_update_button">Update</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_move_title">Selecting the destination folder</string>
    <string name="dialog_move_button">Move</string>
    <string name="snackbar_target_folder">folder name</string>
    <string name="snackbar_target_item">bookmarks</string>
    <string name="snackbar_update_message">Updated %s.</string>
    <string name="snackbar_create_message">Added %s.</string>
    <string name="delete_title">Do you want to delete %s?</string>
    <string name="delete_item_message">This operation is irreversible.</string>
    <string name="delete_folder_message">The bookmarks in the folder will also be deleted.\nIf you are sharing, it will also be deleted from the person you are sharing it with.\nThis operation is irreversible.</string>
    <string name="deleted_message">Deleted. </string>
    <string name="move_complete">Moved</string>
    <string name="snackbar_sort_complete_message">I saved the sort.</string>
    <string name="snackbar_sort_cancel_message">The sort has been cancelled.</string>
    <string name="toast_thumbnail_reload">Update the image.</string>
    <string name="snackbar_all_thumbnail_reload">Update all images.</string>

    <!-- 共有 -->
    <string name="share_login_warning">You must be logged in to share.\nClick on \"Sign In\" in the left menu and sign in with your Google Account.</string>

    <!-- お知らせ -->
    <string name="notification_network_error">The notification could not be loaded due to a communication failure.\nTry to update it in a place with good electric field conditions.</string>

    <!-- フォルダー共有 -->
    <string name="share_title">Select destination</string>
    <string name="share_permission">Use contact information</string>
    <string name="share_done">Save</string>
    <string name="share_permission_dialog">Permission to access the site is required to select from the contact list.</string>
    <string name="share_placeholder">Shared email address</string>
    <string name="share_permission_disable_dialog_message">Set the permissions for getting contact information from \"Allow\" in the app information.</string>
    <string name="share_permission_disable_dialog_ok">Application Information</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="share_email_invalid">Invalid email address.</string>
    <string name="share_email_invalid_dialog_message">Because it is an invalid email address, it will not be shared with the following email addresses.</string>
    <string name="share_email_message">Please note that this app cannot be shared with any other contact except Gmail (including G Suite).</string>
    <string name="share_end_warning">Do you want to discard the changes?\nYour changes will not be saved.</string>
    <string name="share_end_warning_ok">Discard</string>
    <string name="share_end_done">You have saved your shares.</string>

    <!-- 通知周り -->
    <string name="notification_channel_from_app">Notifications from the App</string>
    <string name="notification_channel_work_server">Notice while working with the server</string>
    <string name="notification_update_message">Updating…</string>
    <string name="notification_image_update_message">Images are being updated…</string>
    <string name="first_dialog_message">Thank you for downloading our app!\nEach function can be confirmed from \"How to use\" in the left menu.</string>
    <string name="first_dialog_ok">How TO USE</string>
    <string name="first_dialog_cancel">LATER</string>

    <!-- その他 -->
    <string name="other_menu_privacy_policy">Privacy Policy</string>
    <string name="other_menu_terms_of_use">Terms of Use</string>
    <string name="other_menu_version">Version</string>
    <string name="other_menu_contact_us">Contact Us</string>
    <string name="all_sync_dialog_title">Update all data</string>
    <string name="all_sync_dialog_subject">This feature is for emergency use only.\nPlease refrain from using it unless you are informed by the administrator.\n\nDo you want to delete all data on the device and get all data from the server?</string>
    <string name="all_sync_dialog_exec">Execute with understanding</string>
    <string name="communication_error">Failed to load.\nPlease check the status of your Wi-Fi and mobile communications.</string>

    <!-- 使い方 -->
    <string name="how_to_use_text_main_1">With this app, you\'re free to save and share both your regular recipes and your favorite sites, complete with images!</string>
    <string name="how_to_use_text_sub_1">If you want to share your favorite recipes with your spouse at any time, or if you want to talk over this website together, you can do so through this app.\nIt\'s easy to do!</string>
    <string name="how_to_use_text_main_2">Tap Share on the browser you normally use!</string>
    <string name="how_to_use_text_sub_2">Tap the top right corner of your browser, such as Google Chrome, to open the menu and select Share.</string>
    <string name="how_to_use_text_main_3">Select Sheb!!</string>
    <string name="how_to_use_text_sub_3">Select our application \"Sheb!!\" from the sharing menu.</string>
    <string name="how_to_use_text_main_4">Add URL!</string>
    <string name="how_to_use_text_sub_4">Check the title and URL and tap Add.</string>
    <string name="how_to_use_text_main_5">Addition complete!</string>
    <string name="how_to_use_text_sub_5">The bookmark will be added as an arrow. (Image may not be set depending on the site.)</string>
    <string name="how_to_use_text_main_6">Share the folder!</string>
    <string name="how_to_use_text_sub_6">Select \"Share Folder\" from the folder\'s menu.</string>
    <string name="how_to_use_text_main_7">Set share destination!</string>
    <string name="how_to_use_text_sub_7">Enter the Google email address of the person you want to share with, and tap the checkbox in the upper right corner to share the bookmarks in the folder. (You can also search for the email address in your address book.</string>

    <!-- 良くある質問 -->
    <string name="questions_title">FAQ</string>
    <string name="questions_text">Do you have any of the following problems?</string>
    <string name="inquiry_button">Inquire directly</string>
</resources>
