<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
      android:key="user_name"
      android:title="@string/setting_user_name"
      android:dialogTitle="@string/setting_user_name"
      app:useSimpleSummaryProvider="true"
      app:singleLineTitle="false" />
    <SwitchPreferenceCompat
      android:key="show_mail_address"
      android:title="@string/setting_user_mail"
      android:defaultValue="true"
      app:singleLineTitle="false" />
    <SwitchPreferenceCompat
      android:key="backup_restore_auto"
      android:title="@string/setting_backup_restore_timing"
      android:summary="@string/setting_backup_restore_timing_summary"
      app:singleLineTitle="false" />
    <SwitchPreferenceCompat
      android:key="close_app"
      android:title="@string/setting_close_application"
      android:summary="@string/setting_close_application_summary"
      app:singleLineTitle="false" />
    <ListPreference
      android:key="start_folder"
      android:title="@string/setting_start_folder"
      app:useSimpleSummaryProvider="true"
      android:entries="@array/first_folder_labels"
      android:entryValues="@array/first_folder_values"
      android:dialogTitle="@string/setting_start_folder"
      android:defaultValue="root" />
</androidx.preference.PreferenceScreen>