<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
      android:id="@+id/menu_folder_add"
      android:icon="@drawable/ic_item_create_new_folder"
      android:orderInCategory="10"
      android:title="@string/menu_folder_add"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_item_add"
      android:icon="@drawable/ic_create_item"
      android:orderInCategory="20"
      android:title="@string/menu_item_add"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_sort_start"
      android:icon="@drawable/ic_sort"
      android:orderInCategory="30"
      android:title="@string/menu_sort"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_image_reacquisition"
      android:icon="@drawable/ic_image_reload"
      android:orderInCategory="40"
      android:title="@string/menu_image_reacquisition"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_sort_end"
      android:icon="@drawable/ic_check"
      android:orderInCategory="50"
      android:title="@string/menu_sort"
      app:showAsAction="ifRoom" />
</menu>
